refactor: update branch after rebase

--- a/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
@@ -75,6 +75,11 @@
     --contextMenuItemColor: var(--givewp-red-600);
 }
 
+.sectionFieldInputWrapper {
+    display: flex;
+    gap: var(--givewp-spacing-2);
+}
+
 .prefixSelect {
     flex: 1 0 6.625rem;
 }
