--- a/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
@@ -75,10 +75,17 @@
     --contextMenuItemColor: var(--givewp-red-600);
 }
 
+$breakpoint-desktop: 900px;
+
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: var(--givewp-spacing-4);
+
+    @media (max-width: $breakpoint-desktop) {
+        grid-template-columns: 1fr;
+        gap: var(--givewp-spacing-6);
+    }
 }
 
 .leftColumn, .rightColumn {
@@ -90,6 +97,10 @@
 
 .leftColumn {
     grid-column: span 2;
+
+    @media (max-width: $breakpoint-desktop) {
+        grid-column: span 1;
+    }
 }
 
 .rightColumn {
@@ -105,6 +116,8 @@
     border-radius: 8px;
     border: solid 1px #f3f4f6;
     background-color: var(--givewp-shades-white);
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .transactionList {
@@ -112,6 +125,7 @@
     flex-direction: column;
     width: 100%;
     padding: 1rem;
+    box-sizing: border-box;
 }
 
 .transactionItem {
@@ -120,6 +134,10 @@
     align-items: center;
     gap: var(--givewp-spacing-3);
     padding: var(--givewp-spacing-4) 0;
+
+    @media (max-width: $breakpoint-desktop) {
+        flex-wrap: wrap;
+    }
 }
 
 .transactionInfo {
@@ -171,6 +189,11 @@
     display: flex;
     align-items: center;
     gap: var(--givewp-spacing-1);
+
+    @media (max-width: $breakpoint-desktop) {
+        flex-wrap: wrap;
+        gap: var(--givewp-spacing-2);
+    }
 
     span:first-child {
         font-size: 1rem;
@@ -231,6 +254,10 @@
     border-bottom: solid 1px #f3f4f6;
     background-color: var(--givewp-shades-white);
 
+    @media (max-width: $breakpoint-desktop) {
+        flex-wrap: wrap;
+    }
+
     .summaryCardLabel {
         flex-grow: 1;
         font-size: 1rem;
@@ -258,7 +285,6 @@
             align-items: center;
             justify-content: center;
             margin: var(--givewp-spacing-5) 0 var(--givewp-spacing-3) 0;
-
         }
     }
 
