refactor: improve action button/link

--- a/src/Admin/components/Header/styles.module.scss
+++ b/src/Admin/components/Header/styles.module.scss
@@ -47,4 +47,10 @@
     border-radius: 4px;
     background-color: #e5e7eb;
     border: none;
+    cursor: pointer;
+
+    &:hover {
+        background-color: var(--givewp-neutral-200);
+        color: inherit;
+    }
 }
