--- a/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
+++ b/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
@@ -312,7 +312,7 @@
                 line-height: 1.56;
                 color: var(--givewp-neutral-900);
                 padding: 0;
-                margin-bottom: var(--givewp-spacing-1);
+                margin: 0 0 var(--givewp-spacing-1);
             }
 
             .sectionDescription {
@@ -322,10 +322,11 @@
             }
 
             .sectionSubtitle {
+                color: var(--givewp-neutral-700);
                 font-size: 1rem;
                 font-weight: 500;
                 line-height: 1.5;
-                color: var(--givewp-neutral-700);
+                margin: 0;
             }
 
             .sectionField {
