Feature: Add Donor Profile tab with Personal Details section (#7954)

--- a/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
@@ -74,3 +74,12 @@
 .archive {
     --contextMenuItemColor: var(--givewp-red-600);
 }
+
+.sectionFieldInputWrapper {
+    display: flex;
+    gap: var(--givewp-spacing-2);
+}
+
+.prefixSelect {
+    flex: 1 0 6.625rem;
+}
