feature: implement add address

--- a/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Profile/Address/styles.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Profile/Address/styles.module.scss
@@ -245,10 +245,12 @@
         .select {
             appearance: none;
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M19 9l-7 7-7-7'%3E%3C/path%3E%3C/svg%3E");
-            background-repeat: no-repeat;
             background-position: right 0.75rem center;
+            background-repeat: no-repeat;
             background-size: 1rem;
             cursor: pointer;
+            max-width: none;
+            width: 100%;
         }
 
         .errorMessage {
