--- a/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Profile/Address/styles.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Profile/Address/styles.module.scss
@@ -131,6 +131,43 @@
         }
     }
 
+    .blankSlate {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: var(--givewp-spacing-12) var(--givewp-spacing-6);
+        border: 1px solid var(--givewp-neutral-100);
+        border-radius: var(--givewp-rounded-8);
+        background-color: var(--givewp-shades-white);
+
+        .icon {
+            margin-bottom: var(--givewp-spacing-4);
+            opacity: 0.6;
+
+            svg {
+                display: block;
+            }
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: var(--givewp-spacing-4);
+        }
+
+        .title {
+            color: var(--givewp-neutral-600);
+            font-size: 1rem;
+            font-weight: 500;
+            line-height: 1.5;
+            margin: 0;
+            max-width: 24rem;
+        }
+    }
+
     .add {
         display: flex;
         justify-content: center;
