--- a/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Profile/Address/styles.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Profile/Address/styles.module.scss
@@ -132,37 +132,17 @@
     }
 
     .blankSlate {
+        align-items: center;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        gap: var(--givewp-spacing-4);
         justify-content: center;
         text-align: center;
-        padding: var(--givewp-spacing-12) var(--givewp-spacing-6);
-        border: 1px solid var(--givewp-neutral-100);
-        border-radius: var(--givewp-rounded-8);
-        background-color: var(--givewp-shades-white);
 
-        .icon {
-            margin-bottom: var(--givewp-spacing-4);
-            opacity: 0.6;
-
-            svg {
-                display: block;
-            }
-        }
-
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: var(--givewp-spacing-4);
-        }
-
-        .title {
-            color: var(--givewp-neutral-600);
-            font-size: 1rem;
-            font-weight: 500;
-            line-height: 1.5;
+        .description {
+            color: var(--givewp-neutral-500);
+            font-size: 0.875rem;
+            line-height: 1.43;
             margin: 0;
             max-width: 24rem;
         }
