--- a/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
+++ b/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
@@ -151,7 +151,22 @@
     line-height: 1.5rem;
     text-align: center;
     cursor: pointer;
-    box-sizing: border-box
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    &:before {
+        content: attr(data-text);
+        font-weight: 600;
+        height: 0;
+        visibility: hidden;
+        overflow: hidden;
+        user-select: none;
+        pointer-events: none;
+        speak: none;
+      }
 }
 
 @media screen and (min-width: 48rem) {
@@ -182,24 +197,8 @@
 
 .tabs [data-reach-tab][aria-selected='true'],
 .tabs [role='tab'][aria-selected='true'] {
-    font-weight: 600;
     color: var(--givewp-neutral-900);
-}
-
-// set width for each tab to maintain size on hover.
-.tabs [data-reach-tab]:first-child,
-.tabs [role='tab']:first-child {
-    width: 106px;
-}
-
-.tabs [data-reach-tab]:nth-child(2),
-.tabs [role='tab']:nth-child(2) {
-    width: 95px;
-}
-
-.tabs [data-reach-tab]:last-child,
-.tabs [role='tab']:last-child {
-    width: 79px;
+    font-weight: 600;
 }
 
 .tabs [data-reach-tab][aria-selected='true']::after,
@@ -207,14 +206,14 @@
     background-color: #66bb6a;
 }
 
-.archiveDialogContent {
+.confirmationDialogContent {
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     color: var(--givewp-neutral-700);
 }
 
-.archiveDialogButtons {
+.confirmationDialogButtons {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -244,7 +243,7 @@
         }
     }
 
-    .confirmButton {
+    .confirmButton--error {
         border: 1px solid var(--givewp-red-500);
         background-color: var(--givewp-red-500);
         color: var(--givewp-shades-white);
@@ -252,6 +251,17 @@
         &:hover {
             border: 1px solid var(--givewp-red-400);
             background-color: var(--givewp-red-400);
+        }
+    }
+
+    .confirmButton--regular {
+        border: 1px solid var(--wp-admin-theme-color);
+        background-color: var(--wp-admin-theme-color);
+        color: var(--givewp-shades-white);
+
+        &:hover {
+            border: 1px solid var(--wp-admin-theme-color-darker-10);
+            background-color: var(--wp-admin-theme-color-darker-10);
         }
     }
 }
@@ -585,4 +595,126 @@
             }
         }
     }
+}
+
+:global {
+    body.admin-color-light{
+        --wp-admin-theme-color:#0085ba;
+        --wp-admin-theme-color--rgb:0, 133, 186;
+        --wp-admin-theme-color-darker-10:#0073a1;
+        --wp-admin-theme-color-darker-10--rgb:0, 115, 161;
+        --wp-admin-theme-color-darker-20:#006187;
+        --wp-admin-theme-color-darker-20--rgb:0, 97, 135;
+        --wp-admin-border-width-focus:2px;
+      }
+      @media (min-resolution:192dpi){
+        body.admin-color-light{
+          --wp-admin-border-width-focus:1.5px;
+        }
+      }
+
+      body.admin-color-modern{
+        --wp-admin-theme-color:#3858e9;
+        --wp-admin-theme-color--rgb:56, 88, 233;
+        --wp-admin-theme-color-darker-10:#2145e6;
+        --wp-admin-theme-color-darker-10--rgb:33, 69, 230;
+        --wp-admin-theme-color-darker-20:#183ad6;
+        --wp-admin-theme-color-darker-20--rgb:24, 58, 214;
+        --wp-admin-border-width-focus:2px;
+      }
+      @media (min-resolution:192dpi){
+        body.admin-color-modern{
+          --wp-admin-border-width-focus:1.5px;
+        }
+      }
+
+      body.admin-color-blue{
+        --wp-admin-theme-color:#096484;
+        --wp-admin-theme-color--rgb:9, 100, 132;
+        --wp-admin-theme-color-darker-10:#07526c;
+        --wp-admin-theme-color-darker-10--rgb:7, 82, 108;
+        --wp-admin-theme-color-darker-20:#064054;
+        --wp-admin-theme-color-darker-20--rgb:6, 64, 84;
+        --wp-admin-border-width-focus:2px;
+      }
+      @media (min-resolution:192dpi){
+        body.admin-color-blue{
+          --wp-admin-border-width-focus:1.5px;
+        }
+      }
+
+      body.admin-color-coffee{
+        --wp-admin-theme-color:#46403c;
+        --wp-admin-theme-color--rgb:70, 64, 60;
+        --wp-admin-theme-color-darker-10:#383330;
+        --wp-admin-theme-color-darker-10--rgb:56, 51, 48;
+        --wp-admin-theme-color-darker-20:#2b2724;
+        --wp-admin-theme-color-darker-20--rgb:43, 39, 36;
+        --wp-admin-border-width-focus:2px;
+      }
+      @media (min-resolution:192dpi){
+        body.admin-color-coffee{
+          --wp-admin-border-width-focus:1.5px;
+        }
+      }
+
+      body.admin-color-ectoplasm{
+        --wp-admin-theme-color:#523f6d;
+        --wp-admin-theme-color--rgb:82, 63, 109;
+        --wp-admin-theme-color-darker-10:#46365d;
+        --wp-admin-theme-color-darker-10--rgb:70, 54, 93;
+        --wp-admin-theme-color-darker-20:#3a2c4d;
+        --wp-admin-theme-color-darker-20--rgb:58, 44, 77;
+        --wp-admin-border-width-focus:2px;
+      }
+      @media (min-resolution:192dpi){
+        body.admin-color-ectoplasm{
+          --wp-admin-border-width-focus:1.5px;
+        }
+      }
+
+      body.admin-color-midnight{
+        --wp-admin-theme-color:#e14d43;
+        --wp-admin-theme-color--rgb:225, 77, 67;
+        --wp-admin-theme-color-darker-10:#dd382d;
+        --wp-admin-theme-color-darker-10--rgb:221, 56, 45;
+        --wp-admin-theme-color-darker-20:#d02c21;
+        --wp-admin-theme-color-darker-20--rgb:208, 44, 33;
+        --wp-admin-border-width-focus:2px;
+      }
+      @media (min-resolution:192dpi){
+        body.admin-color-midnight{
+          --wp-admin-border-width-focus:1.5px;
+        }
+      }
+
+      body.admin-color-ocean{
+        --wp-admin-theme-color:#627c83;
+        --wp-admin-theme-color--rgb:98, 124, 131;
+        --wp-admin-theme-color-darker-10:#576e74;
+        --wp-admin-theme-color-darker-10--rgb:87, 110, 116;
+        --wp-admin-theme-color-darker-20:#4c6066;
+        --wp-admin-theme-color-darker-20--rgb:76, 96, 102;
+        --wp-admin-border-width-focus:2px;
+      }
+      @media (min-resolution:192dpi){
+        body.admin-color-ocean{
+          --wp-admin-border-width-focus:1.5px;
+        }
+      }
+
+      body.admin-color-sunrise{
+        --wp-admin-theme-color:#dd823b;
+        --wp-admin-theme-color--rgb:221, 130, 59;
+        --wp-admin-theme-color-darker-10:#d97426;
+        --wp-admin-theme-color-darker-10--rgb:217, 116, 38;
+        --wp-admin-theme-color-darker-20:#c36922;
+        --wp-admin-theme-color-darker-20--rgb:195, 105, 34;
+        --wp-admin-border-width-focus:2px;
+      }
+      @media (min-resolution:192dpi){
+        body.admin-color-sunrise{
+          --wp-admin-border-width-focus:1.5px;
+        }
+      }
 }
