--- a/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
+++ b/src/Views/Components/AdminDetailsPage/AdminDetailsPage.module.scss
@@ -9,6 +9,7 @@
     }
 
     .post-type-give_forms #wpbody {
+        -webkit-font-smoothing: antialiased;
         box-sizing: border-box;
         background-color: #f9fafb;
         min-height: calc(100vh - 32px);
