--- a/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Profile/Address/styles.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Profile/Address/styles.module.scss
@@ -10,6 +10,7 @@
 
     .item {
         border: 1px solid var(--givewp-neutral-100);
+        border-radius: var(--givewp-rounded-4);
         display: flex;
         flex-direction: column;
         gap: var(--givewp-spacing-3);
