feature: add Associated Donor section

--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Records/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Records/styles.module.scss
@@ -65,3 +65,10 @@
         font-weight: 500;
     }
 }
+
+.fieldDescription {
+    color: var(--givewp-neutral-500);
+    font-size: 0.875rem;
+    line-height: 1.43;
+    margin: 0 0 var(--givewp-spacing-1);
+}
