--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
@@ -25,7 +25,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-between;
   gap: var(--givewp-spacing-2);
   width: 100%;
   height: auto;
@@ -33,6 +32,14 @@
   border: 1px solid var(--givewp-neutral-50);
   border-radius: 0.5rem;
   padding: var(--givewp-spacing-4);
+}
+
+.donorCard {
+  gap: var(--givewp-spacing-1);
+
+  .donorLink {
+    margin-top: var(--givewp-spacing-1);
+  }
 }
 
 .campaignCard {
