feature: add payment method icons

--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
@@ -77,6 +77,12 @@
   text-decoration: none;
 }
 
+.paymentMethod {
+  display: flex;
+  align-items: center;
+  gap: var(--givewp-spacing-1);
+}
+
 
 .gatewayLink {
   display: flex;
