fix: add subscription view link

--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
@@ -83,6 +83,13 @@
   gap: var(--givewp-spacing-1);
 }
 
+.donationType {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
 
 .gatewayLink {
   display: flex;
