refactor: update icon space and alignment

--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
@@ -79,8 +79,8 @@
 
 .paymentMethod {
   display: flex;
-  align-items: center;
-  gap: var(--givewp-spacing-1);
+  align-items: flex-end;
+  gap: var(--givewp-spacing-2);
 }
 
 .donationType {
