fix: adjust upgrade link visited styles

--- a/src/Admin/components/StatWidget/styles.module.scss
+++ b/src/Admin/components/StatWidget/styles.module.scss
@@ -111,7 +111,8 @@
 }
 
 .upgradeLink:visited {
-    background: var(--givewp-green-500);
+    color: var(--givewp-shades-white);
+    border: none;
 }
 
 .revenueWidget {
