--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/DonationSummaryGrid/styles.module.scss
@@ -77,6 +77,19 @@
   text-decoration: none;
 }
 
+.paymentMethod {
+  display: flex;
+  align-items: flex-end;
+  gap: var(--givewp-spacing-2);
+}
+
+.donationType {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
 
 .gatewayLink {
   display: flex;
@@ -111,6 +124,6 @@
   border-radius: 9999px;
   font-size: 0.75rem;
   font-weight: 500;
-  text-transform: uppercase;
+  text-transform: none;
   letter-spacing: 0.05em;
 }
