--- a/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/styles.module.scss
+++ b/src/Donations/resources/admin/components/DonationDetailsPage/Tabs/Overview/styles.module.scss
@@ -29,3 +29,16 @@ $breakpoint-desktop: 900px;
 .right {
     grid-column: span 1;
 }
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 1rem 1.5rem 1.5rem;
+    border-radius: 8px;
+    border: solid 1px #f3f4f6;
+    background-color: var(--givewp-shades-white);
+    width: 100%;
+    box-sizing: border-box;
+}
