--- a/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Overview/DonorTransactions/styles.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Overview/DonorTransactions/styles.module.scss
@@ -17,7 +17,6 @@ $breakpoint-desktop: 900px;
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 1rem;
     box-sizing: border-box;
 }
 
@@ -39,6 +38,7 @@ $breakpoint-desktop: 900px;
     flex-direction: column;
     align-items: flex-start;
     margin-left: var(--givewp-spacing-2);
+    gap: 0.313rem;
 }
 
 .transactionIcon {
@@ -46,6 +46,11 @@ $breakpoint-desktop: 900px;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: var(--givewp-neutral-700);
+
+    strong {
+        color: var(--givewp-neutral-900);
+    }
 }
 
 .svgContainer {
@@ -109,11 +114,11 @@ $breakpoint-desktop: 900px;
     align-items: center;
     justify-content: center;
     max-height: fit-content;
-    margin-left: var(--givewp-spacing-2);
     padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
     border-radius: 9999px;
     font-weight: 600;
-    font-size: 0.85rem;
+    font-size: 0.75rem;
+    line-height: 1.5;
     text-transform: capitalize;
 
     &.completed {
