refactor: replace DonorSummary styles

--- a/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Overview/DonorSummary/styles.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/Tabs/Overview/DonorSummary/styles.module.scss
@@ -1,18 +1,5 @@
 $breakpoint-desktop: 900px;
 
-.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 1rem 1.5rem 1.5rem;
-    border-radius: 8px;
-    border: solid 1px #f3f4f6;
-    background-color: var(--givewp-shades-white);
-    width: 100%;
-    box-sizing: border-box;
-}
-
 .summaryCard {
     display: flex;
     justify-content: space-between;
@@ -31,7 +18,7 @@ $breakpoint-desktop: 900px;
         font-weight: 500;
         line-height: 1.5;
         color: #4b5563;
-        padding: var(--givewp-spacing-5) 0 var(--givewp-spacing-3) 0;
+        padding: var(--givewp-spacing-3) 0;
         margin: 0;
     }
 
@@ -40,19 +27,20 @@ $breakpoint-desktop: 900px;
         font-weight: 600;
         line-height: 1.5;
         color: #1f2937;
-        padding: var(--givewp-spacing-5) 0 var(--givewp-spacing-3) 0;
+        padding: var(--givewp-spacing-3) 0;
 
         &.pill {
             background-color: #f9fafb;
-            padding: 0.25rem 0.75rem;
             border-radius: 9999px;
             color: #060c1a;
             border: solid 1px #374151;
             display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: var(--givewp-spacing-5) 0 var(--givewp-spacing-3) 0;
             font-size: 0.75rem;
+            justify-content: center;
+            font-size: 0.75rem;
+            line-height: 1.5;
+            margin: var(--givewp-spacing-3) 0;
+            padding: var(--givewp-spacing-1) var(--givewp-spacing-3);
         }
     }
 
